internal/glance/static/css/widget-bookmarks.css
.bookmarks-group {
    --bookmarks-group-color: var(--color-primary);
}

.bookmarks-group-title {
    color: var(--bookmarks-group-color);
}

.bookmarks-link:not(.bookmarks-link-no-arrow)::after {
    content: '↗' / "";
    margin-left: 0.5em;
    display: inline-block;
    position: relative;
    top: 0.15em;
    color: var(--bookmarks-group-color);
}

.bookmarks-icon-container {
    margin-block: 0.1rem;
    background-color: var(--color-widget-background-highlight);
    border-radius: var(--border-radius);
    padding: 0.5rem;
    opacity: 0.7;
    flex-shrink: 0;
}

.bookmarks-icon {
    width: 20px;
    height: 20px;
    opacity: 0.8;
}

